--- a/content/post/2018-09-30-tidy-text-analysis-of-brett-kavanaugh-s-testimony.Rmd
+++ b/content/post/2018-09-30-tidy-text-analysis-of-brett-kavanaugh-s-testimony.Rmd
@@ -296,7 +296,7 @@ trans_tidy %>%
   geom_bar(stat = "identity") +
   labs(x = "Stemmed word", y = "Times used in Kavanaugh's testimony") +
   coord_flip() +
-  facet_wrap(~ last_speaker_party, scales = "free_x") +
+  facet_wrap(~ last_speaker_party, scales = "free") +
   scale_x_discrete(labels = function(x) str_remove(x,"^\\d+_"))
 ```
 
